// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders custom component 1`] = `
<div
  className="register-box-msg"
>
  Sign in
</div>
`;

exports[`renders default 1`] = `
<p
  className="register-box-msg"
>
  Sign in
</p>
`;
